--- a/rebaser/package.json
+++ b/rebaser/package.json
@@ -4,7 +4,9 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"express": "4.x",
-		"socket.io": "1.4.x"
+		"ejs": "2.x",
+		"socket.io": "1.x",
+		"oojs": "1.x"
 	},
 	"devDependencies": {},
 	"scripts": {
