build: Load OOjs from npm as a dependency, not from lib/
Change-Id: I23f1e0933023ed196b32af00d887674de21c5c4b

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     }
   ],
   "dependencies": {
-    "jquery": "1.11.3"
+    "jquery": "1.11.3",
+    "oojs": "1.1.10"
   },
   "devDependencies": {
     "eslint-config-wikimedia": "0.3.0",
