--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-coverage": "1.1.1",
     "karma-firefox-launcher": "1.0.0",
     "karma-qunit": "1.0.0",
+    "oojs": "1.1.10",
     "qunitjs": "1.23.1",
     "stylelint-config-wikimedia": "0.3.0"
   }
