build: Load jQuery from npm as a dependency, not from lib/
Change-Id: I246e529ca543c9b83d14ef7ed9f30d27809cf494

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
       "url": "https://phabricator.wikimedia.org/diffusion/GVED/browse/master/LICENSE.txt"
     }
   ],
+  "dependencies": {
+    "jquery": "1.11.3"
+  },
   "devDependencies": {
     "eslint-config-wikimedia": "0.3.0",
     "grunt": "1.0.1",
